<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/availBalanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:paddingBottom="10dp"
        android:text="@string/avail_balance"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/availBalanceText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/availBalanceText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:paddingBottom="10dp"
        android:text="@string/default_balance"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/availBalanceLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/moneyEditText"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/default_balance"
        android:imeOptions="actionDone"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warningTextView" />

    <Button
        android:id="@+id/addMoneyButton"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="67dp"
        android:text="@string/addMoneyButtonLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/removeMoneyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyEditText" />

    <Button
        android:id="@+id/removeMoneyButton"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="67dp"
        android:text="@string/removeMoneyLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addMoneyButton"
        app:layout_constraintTop_toBottomOf="@+id/moneyEditText" />

    <TextView
        android:id="@+id/warningTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/warningDefault"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availBalanceLabel" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/startGame"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMoneyButton" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bankWelcomeString"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginLeft="248dp"
        android:layout_marginBottom="5dp"
        android:text="@string/signature"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>